--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="name">Enter name of the college</string>
     <string name="population_hint">Enter total student population</string>
     <string name="tuition_hint">Enter annual in-state tuition</string>
+    <string name="viewOnClickMethod">viewCollegeDetails</string>
 </resources>
